--- a/webBanTiVi/src/main/resources/i18n/messages_en.properties
+++ b/webBanTiVi/src/main/resources/i18n/messages_en.properties
@@ -10,13 +10,16 @@ sidebar.product= Product
 sidebar.staff = Staff
 sidebar.management = Management
 sidebar.invoice = Invoice
-    sidebar.listInvoice= List invoice
-    sidebar.paymentMethod = Payment Method
+sidebar.listInvoice= List invoice
+sidebar.paymentMethod = Payment Method
 sidebar.customer = Customer
-    sidebar.listCustomer = List Customer
+sidebar.listCustomer = List Customer
+sidebar.coupon  = Other
+sidebar.listCoupon = List Coupon
+sidebar.listFeature = List Feature
 sidebar.voucher = Voucher
-    sidebar.listVoucher = List Voucher
-    sidebar.listVoucherCustomer = List Voucher Customer
+sidebar.listVoucher = List Voucher
+sidebar.listVoucherCustomer = List Voucher Customer
 
 # chung
 page.search = Search
@@ -82,9 +85,3 @@ paymentMethod.reset = Reset
 paymentMethod.update = Update
 paymentMethod.delete = Delete
 paymentMethod.addPaymentMethod = Add payment method
-
-
-
-
-
-
